# PacMan

./: .flake8  .gitignore  CLAUDE.md  Makefile  TODO.txt  config.json  pac-man.py  pyproject.toml
pacman/: __init__.py  config.py  highscores.py  maze_loader.py
pacman/entities/: __init__.py  ghost.py  ghost_ai.py  pellets.py  player.py
pacman/game/: __init__.py  engine.py  level.py  states.py
pacman/ui/: __init__.py  keys.py  menus.py  mlx_window.py  renderer.py  screen.py
tests/: __init__.py  test_config.py  test_ghost.py  test_ghost_ai.py  test_highscores.py  test_level.py  test_maze_loader.py  test_pellets.py  test_player.py  test_states.py  test_ui_headless.py
tests/evils_configs/: absurd_values.json  garbage.json  wrong_types.json
tools/: ascii_view.py
